--- a/css/style.css
+++ b/css/style.css
@@ -5299,3 +5299,12 @@ body.light-version {
 @media only screen and (min-width: 1200px) {
 
 }
+#announcement{
+            background-color: #fe5399;
+            color: black;
+            font-size: 12px;
+            padding: 3px;
+        } 
+#logoo{
+    height: 60px
+}
